crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__drizzle__tests__render_schema_enum_declarations_per_dialect@pg.snap
---
source: crates/vespertide-exporter/src/drizzle/mod.rs
assertion_line: 381
expression: rendered
---
import { pgTable, pgEnum, integer } from "drizzle-orm/pg-core";

export const ordersStatus = pgEnum("orders_status", ["new", "paid"]);

export const ticketsStatus = pgEnum("tickets_status", ["new", "paid"]);

export const orders = pgTable("orders", {
  id: integer("id").primaryKey(),
  st: ordersStatus("st").notNull(),
});

export const tickets = pgTable("tickets", {
  id: integer("id").primaryKey(),
  st: ticketsStatus("st").notNull(),
});
