crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__drizzle__tests__render_schema_enum_declarations_per_dialect@sqlite.snap
---
source: crates/vespertide-exporter/src/drizzle/mod.rs
expression: rendered
---
import { sqliteTable, integer, text } from "drizzle-orm/sqlite-core";

export const orders = sqliteTable("orders", {
  id: integer("id").primaryKey(),
  st: text("st", { enum: ["new", "paid"] }).notNull(),
});

export const tickets = sqliteTable("tickets", {
  id: integer("id").primaryKey(),
  st: text("st", { enum: ["new", "paid"] }).notNull(),
});
