crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__drizzle__tests__render_schema_full_file_per_dialect@pg.snap
---
source: crates/vespertide-exporter/src/drizzle/mod.rs
expression: rendered
---
import { pgTable, pgEnum, primaryKey, foreignKey, uniqueIndex, index, check, bigint, integer, text } from "drizzle-orm/pg-core";
import { relations, sql } from "drizzle-orm";

export const documentsDocStatus = pgEnum("documents_doc_status", ["draft", "published", "archived"]);

export const users = pgTable("users", {
  id: integer("id").primaryKey(),
  displayName: text("display_name"),
});

export const posts = pgTable("posts", {
  id: integer("id").primaryKey(),
  userId: integer("user_id").notNull(),
  title: text("title").notNull(),
}, (t) => [
  foreignKey({ columns: [t.userId], foreignColumns: [users.id], name: "fk_posts__user_id" }),
]);

export const documents = pgTable("documents", {
  id: integer("id").notNull(),
  status: documentsDocStatus("status").notNull(),
  reviewStatus: documentsDocStatus("review_status"),
});

export const accounts = pgTable("accounts", {
  id: integer("id").notNull(),
  tenantId: bigint("tenant_id", { mode: "number" }).notNull(),
}, (t) => [
  primaryKey({ name: "accounts_pkey", columns: [t.id, t.tenantId] }),
]);

export const compositeUnique = pgTable("composite_unique", {
  id: integer("id").primaryKey(),
  tenantId: integer("tenant_id").notNull(),
  name: text("name").notNull(),
}, (t) => [
  uniqueIndex("uq_composite_unique__uq_tenant_name").on(t.tenantId, t.name),
]);

export const users = pgTable("users", {
  id: integer("id").notNull(),
  email: text("email").notNull(),
  username: text("username").notNull(),
  department: text("department"),
  status: text("status").notNull().default("active"),
}, (t) => [
  uniqueIndex("uq_users__email").on(t.email),
  uniqueIndex("uq_users__uq_username").on(t.username),
  index("ix_users__idx_department").on(t.department),
]);

export const products = pgTable("products", {
  id: integer("id").primaryKey(),
  price: integer("price").notNull(),
}, (t) => [
  check("chk_products_price", sql`price >= 0`),
]);

export const tasks = pgTable("tasks", {
  id: integer("id").primaryKey(),
  priority: integer("priority").notNull(),
});

export const usersRelations = relations(users, ({ one, many }) => ({
  posts: many(posts),
}));

export const postsRelations = relations(posts, ({ one, many }) => ({
  user: one(users, { fields: [posts.userId], references: [users.id] }),
}));

export const usersRelations = relations(users, ({ one, many }) => ({
  posts: many(posts),
}));
