crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__drizzle__tests__render_schema_suffixes_colliding_bindings@sqlite.snap
---
source: crates/vespertide-exporter/src/drizzle/mod.rs
expression: rendered
---
import { sqliteTable, customType, foreignKey, check, integer } from "drizzle-orm/sqlite-core";
import { relations, sql } from "drizzle-orm";

const integer2 = customType<{ data: string }>({ dataType() { return "integer"; } });

export const userRelations = sqliteTable("user_relations", {
  id: integer("id").primaryKey(),
  kind: integer2("kind").notNull(),
});

export const user = sqliteTable("user", {
  id: integer("id").primaryKey(),
});

export const sql2 = sqliteTable("sql", {
  id: integer("id").primaryKey(),
  amount: integer("amount").notNull(),
}, (t) => [
  check("chk_sql_amount", sql`amount > 0`),
]);

export const posts = sqliteTable("posts", {
  id: integer("id").primaryKey(),
  userId: integer("user_id").notNull(),
}, (t) => [
  foreignKey({ columns: [t.userId], foreignColumns: [user.id] }),
]);

export const userRelations2 = relations(user, ({ one, many }) => ({
  posts: many(posts),
}));

export const postsRelations = relations(posts, ({ one, many }) => ({
  user: one(user, { fields: [posts.userId], references: [user.id] }),
}));
